[gd_scene load_steps=13 format=2]

[ext_resource path="res://Assets/Effects/ShadowBlob.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Effects/Shockwave 01.png" type="Texture" id=2]
[ext_resource path="res://Assets/Gems/Gem3.material" type="Material" id=4]
[ext_resource path="res://Assets/Gems/Gem.gd" type="Script" id=5]
[ext_resource path="res://Assets/Gems/Gem2.material" type="Material" id=6]
[ext_resource path="res://Assets/Gems/Gems.gltf" type="PackedScene" id=7]
[ext_resource path="res://Assets/Gems/Gem4.material" type="Material" id=8]

[sub_resource type="SphereShape" id=1]
radius = 0.776219

[sub_resource type="Animation" id=2]
resource_name = "Idle"
length = 10.0
loop = true

[sub_resource type="Animation" id=3]
resource_name = "Pickup"
length = 12.0
tracks/0/type = "method"
tracks/0/path = NodePath("../../Star13")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 12 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../ReflectionProbe:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../Gems/Shockwave:mesh:size")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 2, 2 ), Vector2( 8, 8 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../Gems/Shockwave:mesh:material:albedo_color")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 0.258817, 1 ),
"update": 0,
"values": [ Color( 0.396078, 0.87451, 0.341176, 1 ), Color( 0.305882, 1, 0.870588, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("../Gems/Shockwave:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="SpatialMaterial" id=4]
flags_transparent = true
flags_unshaded = true
flags_vertex_lighting = true
params_blend_mode = 1
params_billboard_mode = 1
albedo_color = Color( 0.305882, 1, 0.870588, 0 )
albedo_texture = ExtResource( 2 )

[sub_resource type="QuadMesh" id=5]
material = SubResource( 4 )
size = Vector2( 8, 8 )

[node name="Gem" type="Area" groups=[
"stars",
]]
collision_layer = 4
script = ExtResource( 5 )

[node name="Shadow" parent="." instance=ExtResource( 1 )]

[node name="ReflectionProbe" type="ReflectionProbe" parent="."]
visible = false

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="CollisionShape"]
autoplay = "Idle"
anims/Idle = SubResource( 2 )
anims/Pickup = SubResource( 3 )

[node name="Gems" parent="." instance=ExtResource( 7 )]

[node name="Gem4" parent="Gems" index="0"]
transform = Transform( 0.8, 0, 0, 0, 0.8, 0, 0, 0, 0.8, 0, 0, 0 )
visible = false
material/0 = ExtResource( 8 )

[node name="Gem3" parent="Gems" index="1"]
transform = Transform( 0.8, 0, 0, 0, 0, -0.8, 0, 0.8, 0, 0, 0, 0 )
visible = false
material/0 = ExtResource( 4 )

[node name="Gem2" parent="Gems" index="2"]
transform = Transform( 0.604787, 0, 0, 0, 0.604787, 0, 0, 0, 0.604787, 0, 0, 0 )
material/0 = ExtResource( 6 )

[node name="Gem1" parent="Gems" index="3"]
transform = Transform( 0.54533, 0, 0, 0, 0.54533, 0, 0, 0, 0.54533, 0, 0, 0 )
visible = false

[node name="Shockwave" type="MeshInstance" parent="Gems"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00258112, 0.00666428, 0.00320959 )
visible = false
mesh = SubResource( 5 )
material/0 = null
__meta__ = {
"_edit_lock_": true
}
[connection signal="body_entered" from="." to="." method="_on_Star_body_entered"]

[editable path="Gems"]
